actually fixed overflow

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -666,7 +666,6 @@ ul {
 
 .masthead {
   margin-top: 100px;
-  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
