--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -1,7 +1,6 @@
 .masthead {
     // height: 50vh;
     margin-top: 100px;
-    width: 100%;
     text-align: center;
 
     display: flex;
